[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/TurnQueuePanel.gd" type="Script" id=1]
[ext_resource path="res://resources/visual/gui/theme_standard.tres" type="Theme" id=2]
[ext_resource path="res://assets/graphics/ui/icons/turnqueue/current_turn_cursor.png" type="Texture" id=3]
[ext_resource path="res://src/ui/TurnQueue.tscn" type="PackedScene" id=5]

[node name="TurnQueuePanel" type="ReferenceRect"]
margin_right = 14.0
margin_bottom = 20.0
rect_min_size = Vector2( 14, 20 )
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollBlock" type="Control" parent="Panel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 11.0
margin_bottom = 11.0

[node name="Scroll" type="ScrollContainer" parent="Panel/ScrollBlock"]
margin_right = 8.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueueBlock" type="Control" parent="Panel/ScrollBlock/Scroll"]

[node name="TurnQueue" parent="Panel/ScrollBlock/Scroll/QueueBlock" instance=ExtResource( 5 )]

[node name="CurrentTurnCursor" type="TextureRect" parent="Panel/ScrollBlock/Scroll/QueueBlock"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="resized" from="." to="." method="_on_TurnQueuePanel_resized"]
